# Panda3DS

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  patch.patch  perf.data  readme.md  thge_owner_watches_weird-Maaiiid_ANIME.txt
.github/: Alber.desktop  FUNDING.yml  gles.patch  linux-appimage-qt.sh  linux-appimage.sh  mac-bundle-qt.sh  mac-bundle.sh  mac-libs.rb
.github/workflows/: Android_Build.yml  Android_Build_Buildjet.yml  HTTP_Build.yml  Hydra_Build.yml  Linux_AppImage_Build.yml  Linux_Build.yml  MacOS_Build.yml  MacOS_Build_ARM.yml  Qt_Build.yml  Test_Build.yml  Windows_Build.yml  build.yml  build_http.yml  buildjet_test.yml  iOS_Build.yml  tests.yml
cmake/: FindRenderDoc.cmake
docs/3ds/: async_shader_compilation.md  lighting.md
docs/gba-demos/: first.gba  panda-1.gba
docs/img/: windows_icon.rc
docs/libretro/: panda3ds_libretro.info
docs/translations/: el.ts  en.ts  es.ts  nl.ts  pt-br.ts  pt_br.ts  sv.ts
include/: achievements.hpp  action_replay.hpp  align.hpp  android_utils.hpp  arm_defs.hpp  bit_helpers.hpp  bitfield.hpp  capstone.hpp  cheats.hpp  colour.hpp  compiler_builtins.hpp  config.hpp  cpu.hpp  cpu_dynarmic.hpp  cpu_kvm.hpp  discord_rpc.hpp  dynamic_library.hpp  dynarmic_cp15.hpp  emulator.hpp  enum_flag_ops.hpp  external_haptics_manager.hpp  frontend_settings.hpp  gl_state.hpp  gpu.hpp  helpers.hpp  http_server.hpp  httpserver.hpp  hydra_icon.hpp  input_mappings.hpp  io_file.hpp  ios_driver.h  ipc.hpp  jni_driver.hpp  kernel.hpp  log_helpers.hpp  logger.hpp  lua.hpp  lua_manager.hpp  math_util.hpp  memory.hpp  (+18 more)
include/PICA/: draw_acceleration.hpp  float_types.hpp  gpu.hpp  pica_frag_config.hpp  pica_frag_uniforms.hpp  pica_hash.hpp  pica_simd.hpp  pica_uniforms.hpp  pica_vert_config.hpp  pica_vertex.hpp  regs.hpp  screen_layout.hpp  shader.hpp  shader_decompiler.hpp  shader_gen.hpp  shader_gen_types.hpp  shader_unit.hpp  texture.hpp
include/applets/: applet.hpp  applet_manager.hpp  error_applet.hpp  mii_selector.hpp  software_keyboard.hpp
include/audio/: aac.hpp  aac_decoder.hpp  audio_device.hpp  audio_device_interface.hpp  audio_interpolation.hpp  dsp_binary.hpp  dsp_core.hpp  dsp_shared_mem.hpp  dsp_simd.hpp  hle_core.hpp  hle_mixer.hpp  libretro_audio_device.hpp  miniaudio_device.hpp  null_core.hpp  teakra_core.hpp
include/crypto/: aes_engine.hpp
include/fs/: archive_base.hpp  archive_card_spi.hpp  archive_ext_save_data.hpp  archive_ncch.hpp  archive_save_data.hpp  archive_sdmc.hpp  archive_self_ncch.hpp  archive_system_save_data.hpp  archive_twl_photo.hpp  archive_twl_sound.hpp  archive_user_save_data.hpp  bad_word_list.hpp  country_list..hpp  country_list.hpp  ivfc.hpp  mii_data.hpp  romfs.hpp
include/kernel/: config_mem.hpp  fcram.hpp  handles.hpp  kernel.hpp  kernel_types.hpp  resource_limits.hpp
include/loader/: 3dsx.hpp  lz77.hpp  ncch.hpp  ncsd.hpp
include/panda_qt/: about_window.hpp  cheats_window.hpp  config_window.hpp  cpu_debugger.hpp  disabled_widget_overlay.hpp  dsp_debugger.hpp  elided_label.hpp  ellided_label.hpp  input_window.hpp  main_window.hpp  patch_window.hpp  screen.hpp  shader_editor.hpp  text_editor.hpp  thread_debugger.hpp
include/panda_sdl/: frontend_sdl.hpp  imgui_layer.hpp  panda_fsui.hpp
include/renderer_gl/: async_compiler.hpp  gl_driver.hpp  gl_state.hpp  opengl.hpp  renderer_gl.hpp  surface_cache.hpp  surfaces.hpp  textures.hpp
include/renderer_mtl/: mtl_blit_pipeline_cache.hpp  mtl_command_encoder.hpp  mtl_common.hpp  mtl_depth_stencil_cache.hpp  mtl_draw_pipeline_cache.hpp  mtl_lut_texture.hpp  mtl_pipeline_cache.hpp  mtl_render_target.hpp  mtl_texture.hpp  mtl_vertex_buffer_cache.hpp  objc_helper.hpp  pica_to_mtl.hpp  render_target.hpp  renderer_mtl.hpp  texture.hpp  texture_decoder.hpp
include/renderer_null/: renderer_null.hpp
include/renderer_sw/: renderer_sw.hpp
include/renderer_vk/: renderer_vk.hpp  vk_api.hpp  vk_debug.hpp  vk_descriptor_heap.hpp  vk_descriptor_update_batch.hpp  vk_instance.hpp  vk_memory.hpp  vk_pica.hpp  vk_pipeline.hpp  vk_pipeline_manager.hpp  vk_render_manager.hpp  vk_sampler_cache.hpp  vk_scheduler.hpp  vk_stream_buffer.hpp  vk_surfaces.hpp  vk_swapchain.hpp  vulkan_api.hpp
include/result/: result.hpp  result_cfg.hpp  result_common.hpp  result_fnd.hpp  result_fs.hpp  result_gsp.hpp  result_ir.hpp  result_kernel.hpp  result_os.hpp
include/services/: ac.hpp  act.hpp  am.hpp  amiibo_device.hpp  apt.hpp  boss.hpp  cam.hpp  cecd.hpp  cfg.hpp  csnd.hpp  dlp_srvr.hpp  dsp.hpp  dsp_firmware_db.hpp  fonts.hpp  frd.hpp  fs.hpp  gsp_gpu.hpp  gsp_lcd.hpp  hid.hpp  http.hpp  ir_user.hpp  ldr_ro.hpp  mic.hpp  ndm.hpp  news_s.hpp  news_u.hpp  nfc.hpp  nfc_types.hpp  nim.hpp  ns.hpp  nwm_uds.hpp  ptm.hpp  region_codes.hpp  service_intercept.hpp  service_manager.hpp  service_map.hpp  shared_font.hpp  soc.hpp  ssl.hpp  y2r.hpp
src/: achievements.cpp  config.cpp  discord_rpc.cpp  dynamic_library.cpp  emulator.cpp  frontend_settings.cpp  gl_state.cpp  http_server.cpp  httpserver.cpp  hydra_core.cpp  io_file.cpp  ios_driver.mm  jni_driver.cpp  libretro_core.cpp  lua.cpp  main.cpp  memory_mapped_file.cpp  miniaudio.cpp  renderdoc.cpp  renderer.cpp  stb_image_write.c
src/CPU/: cpu_dynarmic.cpp
src/core/: action_replay.cpp  cheats.cpp  elf.cpp  kernel.cpp  memory.cpp  screen_layout.cpp
src/host_shaders/: metal_blit.metal  metal_copy_to_lut_texture.metal  metal_display.metal  metal_shaders.metal  opengl_display.frag  opengl_display.vert  opengl_es_display.frag  opengl_es_display.vert  opengl_fragment_shader.frag  opengl_vertex_shader.vert  vulkan_display.frag  vulkan_display.vert  vulkan_fragment_shader.frag  vulkan_vertex_shader.vert
src/miniaudio/: miniaudio.cpp  miniaudio.m
src/panda_qt/: about_window.cpp  cheats_window.cpp  config_window.cpp  cpu_debugger.cpp  dsp_debugger.cpp  elided_label.cpp  ellided_label.cpp  input_window.cpp  main.cpp  main_window.cpp  mappings.cpp  metal_context.mm  patch_window.cpp  screen.cpp  shader_editor.cpp  text_editor.cpp  (+3 more)
tests/: dynapica.cpp  shader.cpp
uwp/: AppxManifest.in  mingw_uwp_module.cmake
(+426 files in other folders)
